# Quanta-Cleaner

./: CMakeLists.txt  app.rc  main.cpp  readme.md
Qml/: AboutAppPage.qml  HoverButton.qml  Main.qml  MainPage.qml  ParametersPage.qml  SettingsPage.qml
Src/Header/: ClipboardHelper.h  LogsViewer.h  appcontroller.h  crashdump.h  eventlog.h  fontcache.h  isAdminChecked.h  openFolder.h  point.h  recyclebincleaner.h  tempcleaner.h  winsxscleaner.h  wintempclean.h  winupdatecache.h
Src/Source/: IsAdminChecked.cpp  LogsViewer.cpp  appcontroller.cpp  crashdump.cpp  eventlog.cpp  fontcache.cpp  point.cpp  recyclebincleaner.cpp  tempcleaner.cpp  winsxscleaner.cpp  wintempclean.cpp  winupdatecache.cpp
Src/logs/: loghelper.cpp  loghelper.h
localization/: quanta_en.qm  quanta_en.ts  quanta_ru.qm  quanta_ru.ts
